galera/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: galera-ingress-policy
  namespace: data
spec:
  podSelector:
    matchLabels:
      app: galera
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: galera
      ports:
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 4444
        - protocol: TCP
          port: 4567
        - protocol: UDP
          port: 4567
        - protocol: TCP
          port: 4568
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: apps
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: backup
      ports:
        - protocol: TCP
          port: 3306
